Perform locust test against endpoints

--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -55,4 +55,22 @@ jobs:
           endpoints: foo.local bar.local
 
 
+      - name: Python setup
+        uses: actions/setup-python@4
+        with:
+          python-version: '3.13'
+          cache: 'pip'
+
+      - name: Locust setup
+        run: pip install -r load-test/requirements.txt
+
+      - name: Locust test foo.local
+        uses: ./.github/actions/locust-test
+        with:
+          endpoint: http://foo.local
+
+      - name: Locust test bar.local
+        uses: ./.github/actions/locust-test
+        with:
+          endpoint: http://foo.local
 
