--- a/.github/workflows/ci-load-test.yml
+++ b/.github/workflows/ci-load-test.yml
@@ -56,7 +56,7 @@ jobs:
 
 
       - name: Python setup
-        uses: actions/setup-python@4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.13'
           cache: 'pip'
