--- a/.github/actions/locust-test/action.yml
+++ b/.github/actions/locust-test/action.yml
@@ -4,6 +4,9 @@ inputs:
   endpoint:
     description: endpoint to test
     required: true
+  github_token:
+    description: GitHub PAT used to publish a comment
+    required: true
 
 runs:
   using: composite
@@ -11,10 +14,13 @@ runs:
     - shell: bash
       env:
         ENDPOINT: ${{ inputs.endpoint }}
+        GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
         summary_file=/tmp/summary-${ENDPOINT##*/}.txt
 
         echo "Test results for ${ENDPOINT}" > ${summary_file}
-        echo "" >> ${summary_file}
-
+        echo "```" >> ${summary_file}
         locust --only-summary --headless -f load-test/test.py -H ${ENDPOINT} 2>&1 | tee -a ${summary_file}
+        echo "```" >> ${summary_file}
+
+        python load-test/publish-comment.py --filename ${summary_file}
